# 2-1-game-platform

./: README.md  app.py  main.py  pyproject.toml  requirements.txt
assets/: games.csv  logs.csv  marketing_post.csv  purchases.csv  users.csv
server/games/2384e9b6-1ab2-45be-90e8-76b3cc460ce7/: index.html
server/games/2d5b1c36-44d9-4f30-939e-389ff1295952/: index.html
server/games/9af813d5-713d-42e4-9a62-f4faefd16cea/: index.html
sql_files/: add_data.sql  setup.sql
src/agents/: billing_agent.py  game_generator.py  marketing_agent.py
src/data/: db_manager.py
src/orchestrator/: scheduler.py
src/schemas/: game_schemas.py  marketing_schemas.py
src/services/: git_handler.py  linkedin_service.py  llm_service.py  reddit_service.py  stripe_service.py  twitter_service.py
src/tools/: logger.py  logs_db_manager.py
src/utils/: config.py
tests/: billing_agent_test.py  pytest.ini
